--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h3>Preliminary data</h3>
+          <h2>Preliminary data</h2>
         </div>
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
@@ -854,7 +854,7 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a mailto:wanted@wanted.com<wanted@wanted.com</a></p>
+                <p><a mailto:wanted@wanted.com>wanted@wanted.com</a></p>
                 <p><a mailto:alisia.zarbo@studio.unibo.it>alisia.zarbo@studio.unibo.it</a></p>
                 <p><a mailto:enrica.zani@studio.unibo.it>enrica.zani@studio.unibo.it</a></p>
               </div>
@@ -886,7 +886,9 @@
               <div class="form-group mt-3">
                 <input type="text" class="form-control" name="pet_name" id="pet_n" placeholder="Pet name" required>
               </div>
-
+              <div class="form-group mt-3">
+                <input type="text" class="form-control" name="pet_image" id="pet_img" placeholder="Upload an image" required>
+              </div>
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Your story" required></textarea>
               </div>
