--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
       <div class="container" data-aos="fade-up">
 
         <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
+          <div class="col-lg-4 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
             <img src="assets/img/about.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
+          <div class="col-lg-8 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
             <h3>About</h3>
             <!--p class="fst-italic"></p><h3>Titolo da definire</h3-->
             <p><strong>Wanted!</strong> is a project inspired by a <a href="">corpus</a> of pet lost advertisement photographs collected over the years in various places.</p>
@@ -854,9 +854,9 @@
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p><a mailto:wanted@wanted.com>wanted@wanted.com</a></p>
-                <p><a mailto:alisia.zarbo@studio.unibo.it>alisia.zarbo@studio.unibo.it</a></p>
-                <p><a mailto:enrica.zani@studio.unibo.it>enrica.zani@studio.unibo.it</a></p>
+                <p><a href="mailto:wanted@wanted.com">wanted@wanted.com</a></p>
+                <p><a href="mailto:alisia.zarbo@studio.unibo.it">alisia.zarbo@studio.unibo.it</a></p>
+                <p><a href="mailto:enrica.zani@studio.unibo.it">enrica.zani@studio.unibo.it</a></p>
               </div>
               
               <!--div class="phone">
