--- a/PWBD.html
+++ b/PWBD.html
@@ -226,12 +226,12 @@
 	</div>
 
 	<div class="row">
-	  <div class="col-lg-12 col-md-12 d-flex align-items-stretch iframe">
-	   <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" allow="fullscreen"></iframe>
-	  </div>
 	  <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
 	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema">
 	  </div>      
+	  <div class="col-lg-12 col-md-12 d-flex align-items-stretch iframe">
+	   <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" width=100%" allow="fullscreen"></iframe>
+	  </div>
 	</div>
 	</br>
 
