--- a/index.html
+++ b/index.html
@@ -139,8 +139,22 @@
     </section>
 <!-- End About Section -->  
 
+<!-- ======= 0 Cta Section ======= -->
+    <section id="0cta" class="cta">
+      <div class="container" data-aos="zoom-in">
+
+        <div class="text-center">
+          <h3></h3>
+          <p></p>
+          <!--a class="cta-btn" href="#share_form">Fill in the forma and share your story!</a-->
+        </div>
+
+      </div>
+    </section>
+<!-- End Cta Section -->
+
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <!--section id="features" class="features">
       <div class="container" data-aos="fade-up">
 <h1>DEVELOPEMENT</h1>
 <br>
@@ -171,7 +185,7 @@
         </div>
 
       </div>
-    </section>
+    </section-->
 <!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
