--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Gringo - cat">
               <div class="portfolio-info">
                 <h4>Gringo</h4>
                 <p>cat</p>
@@ -542,13 +542,13 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="Luli - dog">
               <div class="portfolio-info">
                 <h4>Luli</h4>
                 <p>dog</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Luli - dog"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio_2.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="Luli.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -556,7 +556,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="Unnamed - cat">
               <div class="portfolio-info">
                 <h4>Unnamed</h4>
                 <p>cat</p>
@@ -570,7 +570,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="Polaco - dog">
               <div class="portfolio-info">
                 <h4>Polaco</h4>
                 <p>dog</p>
@@ -598,7 +598,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="Pepe - cat">
               <div class="portfolio-info">
                 <h4>Pepe</h4>
                 <p>cat</p>
@@ -612,7 +612,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="Biyu - dog">
               <div class="portfolio-info">
                 <h4>Biyu</h4>
                 <p>dog</p>
@@ -626,7 +626,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="Nacha - dog">
               <div class="portfolio-info">
                 <h4>Nacha</h4>
                 <p>dog</p>
