--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
                 <p>cat</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gringo - cat"><i class="bx bx-plus"></i></a>
-                  <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="gringo.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
