--- a/Luli.html
+++ b/Luli.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details - Gp Bootstrap Template</title>
+  <title>Luli Details</title>
   <meta content="Luli dog pet lost details" name="description">
   <meta content="Luli dog pet lost" name="keywords">
 
@@ -127,10 +127,13 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Our memory</h2>
-              <p>
-                Luli se perdiò ..... <!--span style="color:#008000; font-weight:bold;">green collar</span-->.</br>
-                <!--Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.-->
+              <h2>SOS</h2>
+              <p>Se busca a Luli</br>
+              Caniche blanco</br>
+              con <span style="color:#008000; font-weight:bold;">vestido rojo</span></br>
+              se perdio el 10/07/2014</br>
+              zona Parque Sarmiento</br>
+              Recompensa
               </p>
             </div>
           </div>
