--- a/PWBD.html
+++ b/PWBD.html
@@ -134,10 +134,26 @@
 		<div class="row">
 			<div class="container col-lg-6 col-md-6" id="RI">
 			<h5>Reference institutions with its institutional goals<!--/(include raster images or/and panoramas)--></h5>
-			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, similar to the ones in the <a href="index.html#portfolio">stories section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous <a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
+			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, which a sample is in the <a href="index.html#preliminary_data">Preliminary data section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous <a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
 			All these insitutions are devoted to preserve the public testimony of historical facts as well as to celebrate the intimate memory of missed beloved-ones.</br>
-			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. For this part we explored some examples such as those mentioned by Simona Caraceni in her Mewselogy course slides (Hermitage cats army guards, <a href="https://bigcomicbros.net/work/6195/" target="_blank">Le chat du Louvre</a>, <a href="http://catsmuseum.org/" target="_blank">Cat Museum Kotor</a> and Cats Museum Malaysia) as well as by visually referring to artists and their pets such as <strong>Giosetta Fioroni and Biri</strong>, <strong>Frida Kahlo and Granizo</strong>, <strong>Henry Matisse and Minouche</strong>, etc.: on this second inspiration, we realized the <a href="stories.html">In Art</a> section, conceived as a virtual exhibition.</p>
-			<p>The overall context will be then possibly a physical museum hosting a temporary physical exhibiton on humans and artist and their pets relationship, that offers also the possibility to the visitors of having an online introduction - <a href="">In History</a> section - a further online exploration of the artists-pets relationship with contents not physically available in the museum - <a href="stories.html">In Art</a> section - an interactive part where loading and sharing their personal stories - <a href="index.html#portfolio">Your Stories</a> section - and possibly a tool able to help proactively people loosing their pets by visualizing geolocated shared data of missing pets - <a href="">Data</a> section.</p>
+			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. 
+			For this part we explored some examples such as those mentioned by Simona Caraceni in her Mewselogy course slides 
+			(Hermitage cats army guards, <a href="https://bigcomicbros.net/work/6195/" target="_blank">Le chat du Louvre</a>, 
+			<a href="http://catsmuseum.org/" target="_blank">Cat Museum Kotor</a> and Cats Museum Malaysia): 
+			even these references have not been satisfying for our intents, because these museums often celebated single pets, 
+			or a special kind of pets (dogs, cats, etc.) while we were looking for an institution exploring the complex emotive human-pet 
+			relationship "species-indipendent".</br>
+			We then realized the <a href="in_art.html">In Art</a> section, conceived as a virtual exhibition about this topic: the idea, 
+		  	involving famous visual artists, is tto achieve the double goal of humanising the artist and making their emotive world closer to that of the user.
+		  	We then choose some artists and their pets such as <strong>Frida Kahlo and Granizo</strong>, 
+		  	<strong>Henry Matisse and Minouche</strong>, <strong>Giosetta Fioroni and Biri</strong> etc.</p>
+			<p>The overall context will be then possibly a physical museum hosting a temporary physical exhibiton on humans and artist 
+			and their pets relationship, that offers also the possibility to the visitors of having an online introduction 
+			- <a href="">In History</a> section - a further online exploration of the artists-pets relationship with contents 
+			not physically available in the museum - <a href="in_art.html">In Art</a> section - 
+			an interactive part where loading and sharing their personal stories - <a href="index.html#portfolio">Your Stories</a> section
+			- and possibly a tool able to help proactively people loosing their pets by visualizing geolocated shared data of missing pets 
+			- <a href="">Data</a> section.</p>
 		  	<p><b>PUT "DEFINE INST GOALS CARDS".</b></p>
 			</div>
 			<div class="container col-lg-6 col-md-6">
