--- a/PWBD.html
+++ b/PWBD.html
@@ -136,15 +136,15 @@
 			<h5>Reference institutions with its institutional goals<!--/(include raster images or/and panoramas)--></h5>
 			<p>When we started thinking about this project, as said inspired by a self-collected corpus of photographs, which a sample is in the <a href="index.html#preliminary_data">Preliminary data section</a>, the first visual references we thought about had been <strong>memorials</strong> museums and installations such as the <a href="https://www.museomemoriaustica.it/il-museo/" target="_blank">Museo per la Memoria di Ustica</a> - hosting a Boltanski work, artist specially devoted to memory and memorial issues - or the initially spontaneous <a href="https://www.storiaememoriadibologna.it/sacrario-partigiani-in-piazza-nettuno-a-bologna-892-opera" target="_blank">Sacrario partigiani in Piazza Nettuno a Bologna</a> - to mention two Bologneses exaples - or the Argentinian <a href="https://apm.gov.ar/apm/portada" target="_blank">Archivo Provincial de la Memoria/Ex D2</a>.
 			All these insitutions are devoted to preserve the public testimony of historical facts as well as to celebrate the intimate memory of missed beloved-ones.</br>
-			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets. 
-			For this part we explored some examples such as those mentioned by Simona Caraceni in her Mewselogy course slides 
+			Although, we soon realized that, even if a strong memorial component was present in our inspirational material, we would also find the way to celebrate the <strong>joyful</strong> part of the relationship with the - hopefully momentaneously - lost pets.</p> 
+			<p>For this part we explored some examples such as those mentioned by Simona Caraceni in her Mewselogy course slides 
 			(Hermitage cats army guards, <a href="https://bigcomicbros.net/work/6195/" target="_blank">Le chat du Louvre</a>, 
 			<a href="http://catsmuseum.org/" target="_blank">Cat Museum Kotor</a> and Cats Museum Malaysia): 
 			even these references have not been satisfying for our intents, because these museums often celebated single pets, 
 			or a special kind of pets (dogs, cats, etc.) while we were looking for an institution exploring the complex emotive human-pet 
-			relationship "species-indipendent".</br>
-			We then realized the <a href="in_art.html">In Art</a> section, conceived as a virtual exhibition about this topic: the idea, 
-		  	involving famous visual artists, is tto achieve the double goal of humanising the artist and making their emotive world closer to that of the user.
+			relationship "species-indipendent".</p>
+			<p>We then realized the <a href="in_art.html">In Art</a> section, conceived as a virtual exhibition about this topic: the idea, 
+		  	involving famous visual artists, is to achieve the double goal of humanising the artist and making their emotive world closer to that of the user.
 		  	We then choose some artists and their pets such as <strong>Frida Kahlo and Granizo</strong>, 
 		  	<strong>Henry Matisse and Minouche</strong>, <strong>Giosetta Fioroni and Biri</strong> etc.</p>
 			<p>The overall context will be then possibly a physical museum hosting a temporary physical exhibiton on humans and artist 
