--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play ChooseGuide.</tw-noscript></noscript></tw-story>
-<tw-storydata name="ChooseGuide" startnode="1" creator="Twine" creator-version="2.3.16" ifid="47A021B8-772A-445D-806D-638FE4E9B2D0" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Home page" tags="" position="703,264" size="200,100">#Home page
+<tw-storydata name="ChooseGuide" startnode="1" creator="Twine" creator-version="2.3.16" ifid="47A021B8-772A-445D-806D-638FE4E9B2D0" zoom="0.6" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Home page" tags="" position="703,264" size="200,100">#Home page
 //In the home page of the Museum/Virtual exhibition, a button on the right top corner offers the option &quot;Choose a guide&quot;: click on it to start the interactive experience!//
 
 ---
@@ -130,7 +130,7 @@ Enjoy your visit!
 What would you like to do now?
 
 * Have more details of the [[work of art portraying the pet-&gt;art portraying the pet]] in the artist&#39;s room of the exhibition
-* Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="11" name="Further suggestions" tags="" position="1242,390" size="100,100">#Further suggestions
+* Know more about/Go back to [[the artist-&gt;More info about the artist]]</tw-passagedata><tw-passagedata pid="11" name="Further suggestions" tags="" position="1242,388" size="100,100">#Further suggestions
 
 //In this passage, the user can get some bibliography and multimedia contents about the artist, the pet, or their relationship.
 The user can then choose among going back to the artist details, choosing a new story or finishing the interactive experience.//
@@ -151,13 +151,13 @@ What do you like to do now?
 
 Go [[back to the artist-&gt;More info about the artist]] 
 Choose [[a new story-&gt;Choose a story]] 
-[[Finish-&gt;Evaluate the experience]] the visit</tw-passagedata><tw-passagedata pid="12" name="Evaluate the experience" tags="" position="1097,335" size="100,100">#Evaluate the experience
+[[Finish-&gt;Evaluate the experience]] the visit</tw-passagedata><tw-passagedata pid="12" name="Evaluate the experience" tags="" position="1097,333" size="100,100">#Evaluate the experience
 
 //In this passage, the user evaluates their experience//
 
 ---
 
-Please let to us your opionion! 
+Please let to us your anonymous opionion! 
 Your suggestions would be really useful to improve the quality of our services:
 
 * Did you like the guide you have choosen? (dropdown: 2bind $guide, &quot;extremely&quot;, &quot;very&quot;, &quot;somewhat&quot;, &quot;not so&quot;, &quot;not at all&quot;)
@@ -167,6 +167,14 @@ Your suggestions would be really useful to improve the quality of our services:
 * Free comments/suggestions/complains(input-box:&quot;===XXXXXXXXXXXXXXXXXXXX===========================&quot;)
 
 Thank you very much for your visit!
+See a [[preview of my answers-&gt;Answers preview]]</tw-passagedata><tw-passagedata pid="13" name="Answers preview" tags="" position="958,327" size="100,100">#Answers preview
+
+//In this passage, the user rhas a preview of their answers//
+
+---
+These are your answers to the evalution survey, do you confirm?
+(checkbox: 2bind $Yes,&quot;I want to send my answers&quot;)
+Go back to the [[survey-&gt;Evaluate the experience]] 
 [[Goodbye!-&gt;Home page]] </tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">"use strict";var _slicedToArray=function(){return function(e,t){if(Array.isArray(e))return e;if(Symbol.iterator in Object(e))return function(e,t){var n=[],r=!0,a=!1,i=void 0;try{for(var o,s=e[Symbol.iterator]();!(r=(o=s.next()).done)&&(n.push(o.value),!t||n.length!==t);r=!0);}catch(e){a=!0,i=e}finally{try{!r&&s.return&&s.return()}finally{if(a)throw i}}return n}(e,t);throw new TypeError("Invalid attempt to destructure non-iterable instance")}}(),_typeof="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(e){return typeof e}:function(e){return e&&"function"==typeof Symbol&&e.constructor===Symbol&&e!==Symbol.prototype?"symbol":typeof e};function _defineProperty(e,t,n){return t in e?Object.defineProperty(e,t,{value:n,enumerable:!0,configurable:!0,writable:!0}):e[t]=n,e}function _toConsumableArray(e){if(Array.isArray(e)){for(var t=0,n=Array(e.length);t<e.length;t++)n[t]=e[t];return n}return Array.from(e)}!function(){
 /**
