--- a/index.html
+++ b/index.html
@@ -199,8 +199,9 @@
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
+            <div class="sinistra"><img src="assets/img/frida_a4.png" width="100%"></div>
+            <!--div class="icon-box">
+              <div class="icon"><i class="bx bxl-dribbble"></i></div-->
               <h4><a href="">Milo and Lilo</a></h4>
               <p>gattigattigatti</p>
             </div>
