--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <!-- End Features Section -->
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services">
+    <section id="your_stories" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
