--- a/index.html
+++ b/index.html
@@ -903,10 +903,18 @@
               </div>
               <div class="form-group mt-3">
                 <input type="text" class="form-control" name="pet_image" id="pet_img" placeholder="Upload an image" required>
+                <input type="file" id="myFile" name="filename">
               </div>
+              
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" placeholder="Your story" required></textarea>
               </div>
+
+              <div class="form-group mt-3">
+                <label for="myCheck">Checkbox:</label> 
+                <input type="checkbox" id="myCheck" onclick="myFunction()">
+              </div>
+              
               <div class="my-3">
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
