--- a/index.html
+++ b/index.html
@@ -188,21 +188,22 @@
     </section-->
 <!-- End Features Section -->
 
-    <!-- ======= Services Section ======= -->
+    <!-- ======= Your Stories Section ======= -->
     <section id="your_stories" class="services">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>Services</h2>
+          <h2>YOUR STORIES</h2>
           <p>Check our Services</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
-            <div class="sinistra"><img src="assets/img/frida_a4.png" width="100%"></div>
-            <!--div class="icon-box">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div-->
-              <h4><a href="">Milo and Lilo</a></h4>
+            
+            <div class="icon-box">
+              <div class="icon"><img src="assets/img/frida_a4.png" width="100%"></div><!--i class="bx bxl-dribbble"></i-->
+            <!--div class="sinistra">..src</div-->
+            <h4><a href="">Milo and Lilo</a></h4>
               <p>gattigattigatti</p>
             </div>
           </div>
