--- a/index.html
+++ b/index.html
@@ -903,8 +903,8 @@
                 <input type="text" class="form-control" name="pet_name" id="pet_n" placeholder="Pet name" required>
               </div>
               <div class="form-group mt-3">
-                <input type="text" class="form-control" name="pet_image" id="pet_img" placeholder="Upload an image" required>
-                <input type="file" id="myFile" name="filename">
+                <!--input type="text" class="form-control" name="pet_image" id="pet_img" placeholder="Upload an image" required-->
+                <input type="file" class="form-control" name="pet_image" id="pet_img" placeholder="Upload an image" required><!--id="myFile" name="filename"-->
               </div>
               
               <div class="form-group mt-3">
@@ -912,8 +912,8 @@
               </div>
 
               <div class="form-group mt-3">
-                <label for="myCheck">Checkbox:</label> 
-                <input type="checkbox" id="myCheck" onclick="myFunction()">
+                <label for="myCheck">I have read the <a href="">GDPR Wanted! policies</a></label> 
+                <input type="checkbox"><!--id="myCheck" onclick="myFunction()"-->
               </div>
               
               <div class="my-3">
