--- a/index.html
+++ b/index.html
@@ -194,14 +194,15 @@
 
         <div class="section-title">
           <h2>YOUR STORIES</h2>
-          <p>Check our Services</p>
+          <!--p>Check our Services</p-->
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             
             <div class="icon-box">
-              <div class="icon"><img src="assets/img/frida_a4.png" width="100%"></div><!--i class="bx bxl-dribbble"></i-->
+              <img src="assets/img/frida_a4.png" width="100%">
+              <!--div class="icon"><img src="assets/img/frida_a4.png" width="100%"></div--><!--i class="bx bxl-dribbble"></i-->
             <!--div class="sinistra">..src</div-->
             <h4><a href="">Milo and Lilo</a></h4>
               <p>gattigattigatti</p>
