--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             
             <div class="icon-box">
-              <img src="assets/img/frida_a4.png">
+              <img src="assets/img/your_stories/Milo_Lilo.jpg" height="50%">
               <!--div class="icon"><img src="assets/img/frida_a4.png" width="100%"></div--><!--i class="bx bxl-dribbble"></i-->
             <!--div class="sinistra">..src</div-->
             <h4><a href="">Milo and Lilo</a></h4>
-              <p>Milo and Lilo are different twins: different ages, different aptitudes, different plays. 
-                But when a new items arrives at home they both are really keen on inspecting it and removing every possible external danger with their lovely rubbing!</p>
+              <p>Milo and Lilo are different twins: different ages, different aptitudes, different plays.</p>
+              <p>But when a new items arrives at home they both are really keen on inspecting it and removing every possible external danger with their lovely rubbing!</p>
             </div>
           </div>
 
