--- a/in_art.html
+++ b/in_art.html
@@ -67,7 +67,7 @@ function off() {
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-
+      <a href="in_art.html" class="get-started-btn scrollto">Choose your guide!</a>
       <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
 
     </div>
