--- a/index.html
+++ b/index.html
@@ -529,7 +529,21 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
-
+       
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-0.jpg" class="img-fluid" alt="Nobu - cat">
+              <div class="portfolio-info">
+                <h4>Nobu</h4>
+                <p>cat</p>
+                <div class="portfolio-links">
+                  <a href="assets/img/portfolio/portfolio-0.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Nobu - cat"><i class="bx bx-plus"></i></a>
+                  <a href="Nobu.html" title="More Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="Gringo - cat">
@@ -538,7 +552,7 @@
                 <p>cat</p>
                 <div class="portfolio-links">
                   <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Gringo - cat"><i class="bx bx-plus"></i></a>
-                  <a href="gringo.html" title="More Details"><i class="bx bx-link"></i></a>
+                  <a href="Gringo.html" title="More Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
