--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             
             <div class="icon-box">
-              <img src="assets/img/your_stories/Milo_Lilo.jpg" height="50%">
+              <img src="assets/img/your_stories/Milo_Lilo.jpeg" height="50%">
               <!--div class="icon"><img src="assets/img/frida_a4.png" width="100%"></div--><!--i class="bx bxl-dribbble"></i-->
             <!--div class="sinistra">..src</div-->
             <h4><a href="">Milo and Lilo</a></h4>
