--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
             
-            <div class="icon-box">
-              <img src="assets/img/your_stories/Milo_Lilo.jpeg" height="50%">
-              <!--div class="icon"><img src="assets/img/frida_a4.png" width="100%"></div--><!--i class="bx bxl-dribbble"></i-->
-            <!--div class="sinistra">..src</div-->
+            <div class="icon-box ys">
+              <img src="assets/img/your_stories/Milo_Lilo.jpeg" width="100%">
+              <!--div class="icon"><i class="bx bxl-dribbble"></i><img src="assets/img/frida_a4.png" width="100%"></div-->
             <h4><a href="">Milo and Lilo</a></h4>
               <p>Milo and Lilo are different twins: different ages, different aptitudes, different plays.</p>
               <p>But when a new items arrives at home they both are really keen on inspecting it and removing every possible external danger with their lovely rubbing!</p>
