--- a/Nobu.html
+++ b/Nobu.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Luli Details</title>
+  <title>Nobu Details</title>
   <meta content="Nobu cat pet lost details" name="description">
   <meta content="Nobu cat pet lost" name="keywords">
 
@@ -110,7 +110,7 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h3>Luli</h3>
+              <h3>Nobu</h3>
               <ul>
                 <li><strong>Name</strong>: Nobu</li>
                 <li><strong>Type</strong>: cat</li>
@@ -127,9 +127,11 @@
             </div>
             <div class="portfolio-description">
               <h2>SOS</h2>
-              <p>CERCO GATTO CERTOSINO (Grigio, pelo lucente)</br>
+              <p align="center">CERCO GATTO CERTOSINO (Grigio, pelo lucente)</br>
               SPARITO IERI POMERIGGIO 25/3/22 IN VIA AUDINOT vicino angolo VIA GALLETTI</br>
-              si chiama NOBU ed è un po' timido e tonto
+              si chiama NOBU ed è un po' <strong>timido e tonto</strong></br>
+              se lo trovate avvisate all'affittacamere ...</br>
+              oppure al ...
               </p>
             </div>
           </div>
