--- a/Gringo.html
+++ b/Gringo.html
@@ -117,11 +117,11 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Our memory</h2>
+              <h2>SOS</h2>
               <p>Me llamo Gringo</br>
               Soy atigrado y flaco</br>
               Tengo  <span style="color:#008000; font-weight:bold;">collar verde</span>.</br>
-              !Gracias desde ya por cualquier informacion!</p>
+              ¡Gracias desde ya por cualquier informacion!</p>
               <!--p>My children are used to play a lot with Gringo. We welcomed him 3 years ago and he brought a lot fo joy in our family. This photograph have been taken in Christmas time when we gift him with a <span style="color:#008000; font-weight:bold;">green collar</span>.</br></p-->
             </div>
           </div>
