--- a/Nobu.html
+++ b/Nobu.html
@@ -127,7 +127,7 @@
             </div>
             <div class="portfolio-description">
               <h2>SOS</h2>
-              <p align="center">CERCO GATTO CERTOSINO (Grigio, pelo lucente)</br>
+              <p>CERCO GATTO CERTOSINO (Grigio, pelo lucente)</br>
               SPARITO IERI POMERIGGIO 25/3/22 IN VIA AUDINOT vicino angolo VIA GALLETTI</br>
               si chiama NOBU ed è un po' <strong>timido e tonto</strong></br>
               se lo trovate avvisate all'affittacamere ...</br>
