--- a/Luli.html
+++ b/Luli.html
@@ -115,25 +115,28 @@
               <ul>
                 <li><strong>Name</strong>: Luli</li>
                 <li><strong>Type</strong>: dog</li>
-                <li><strong>Lost in date</strong>: 01 March, 2020</li>
-                <li><strong>Lost in place</strong>: Buenos Aires (Argentina)</li>
+                <li><strong>Lost in date</strong>: 10 July, 2014</li>
+                <li><strong>Lost in place</strong>: Parque Sarmiento - Córdoba (Argentina)</li>
+                <li><div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">how to embed google maps into html</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+                </li>
                 <!--li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
               </ul>
               <ul>
                 <li><strong>Category</strong>: Web design</li>
                 <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
+                <li><strong>Project date</strong>: 10 July, 2014</li>
                 <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li-->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>SOS</h2>
-              <p>Se busca a Luli</br>
-              Caniche blanco</br>
-              con <span style="color:#008000; font-weight:bold;">vestido rojo</span></br>
-              se perdio el 10/07/2014</br>
-              zona Parque Sarmiento</br>
-              Recompensa
+              <p>SE BUSCA A LULI</br>
+              CANICHE BLANCO</br>
+              CON <span style="color:#FF0000; font-weight:bold;">VESTIDO ROJO</span></br>
+              SE PERDIO EL 10/07/2014</br>
+              ZONA PARQUE SARMIENTO</br>
+    RECOMPENSA</br>
+  TEL. ... - ...
               </p>
             </div>
           </div>
