--- a/index.html
+++ b/index.html
@@ -210,17 +210,20 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Birba</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <img src="assets/img/your_stories/Pollon.jpeg" width="100%">
+              <!--div class="icon"><i class="bx bx-file"></i></div-->
+              <h4>Pollon (aka Polly)</h4>
+              <p>Pollon aka Polly arrived in our lifes 5 years ago. She is a very princess aptitude little dog, with lovely rabbit ears. </br>
+              Here in one of her favorite activities. We really love her!
+              </p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4><a href="">Black</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <h4>Fatoush</h4>
+              <p>Fatoush comes from Lebanoon. He often stays looking at the windows remembering the first hot summers we spent there togheter.</p>
             </div>
           </div>
 
