--- a/in_art.html
+++ b/in_art.html
@@ -67,7 +67,8 @@ function off() {
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a href="in_art.html" class="get-started-btn scrollto">Choose your guide!</a>
+      <a href="ChooseGuide.html" class="get-started-btn scrollto" 
+         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a>
       <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
 
     </div>
