--- a/conceptual.html
+++ b/conceptual.html
@@ -51,6 +51,7 @@ function off() {
   <h3>WHERE THE IDEA COME FROM</h3>
 
   <p> Between 2014 and 2020 Enrica started to collect, through her camera, all the most interesting papers of lost animals she met on her road, in different places around the world.</p>
+  <p><strong>proposta "As in <a href"index.html#preliminary_data" target="_blank">Preliminary data section</a>"</strong></p>
   <p><iframe style="height: 19vw;" src="https://drive.google.com/embeddedfolderview?id=1jqpdEX8i9HmnxHqXckQhs7tieuLFgDdd#grid" width="100%" height="500" frameborder="0"></iframe></p>
   <p>She was particularly impressed by the sentimental value that some of this notice papers could express about the affective tie between the lost animals and their owners.</p>
   
@@ -60,6 +61,11 @@ function off() {
   <br>
 
   <p>AN EXEMPLIFICATION</p>
+  <p>prove con iframe</p>
+  <iframe src="Nobu.html" width="30%"></iframe>
+  <iframe src="Gringo.html" width="30%"></iframe>
+  <iframe src="Luli.html" width="30%"></iframe>
+  
   <img width="30%" style="margin-left: 35%" src="assets/img/gattocertosino.jpeg">
 
 <div style="width: 50%; margin-left: 25%">
