--- a/index.html
+++ b/index.html
@@ -221,8 +221,9 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4>Fatoush</h4>
+              <img src="assets/img/your_stories/Fatoush.jpeg" width="100%">
+              <!--div class="icon"><i class="bx bx-tachometer"></i></div-->
+              <h4>فتوش‎, Fatoush</h4>
               <p>Fatoush comes from Lebanoon. He often stays looking at the windows remembering the first hot summers we spent there togheter.</p>
             </div>
           </div>
@@ -432,7 +433,7 @@
         <div class="text-center">
           <h3>Share your story too!</h3>
           <p>Let your human-pet familiary story be known! We really enjoy to collect and preserve your memories and build togheter a big archive of antispecistic relationships!</p>
-          <a class="cta-btn" href="#share_form">Fill in the forma and share your story!</a>
+          <a class="cta-btn" href="#share_form">Fill in the form and share your story!</a>
         </div>
 
       </div>
