--- a/in_art.html
+++ b/in_art.html
@@ -67,9 +67,12 @@ function off() {
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
+      
+      <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
       <a href="ChooseGuide.html" class="get-started-btn scrollto" 
          onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Choose your guide!</a>
-      <a href="in_art.html" class="get-started-btn scrollto">The exhibit</a>
+      <a href="Share.html" class="get-started-btn scrollto" 
+         onclick="window.open(this.href, 'mywin', 'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;">Share your story!</a>
 
     </div>
   </header>
@@ -85,7 +88,7 @@ function off() {
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>In Art Iconic Stories</h2>
+          <h2>In Art - Iconic Stories</h2>
           <hr>
         </div>
 
