--- a/PWBD.html
+++ b/PWBD.html
@@ -159,7 +159,7 @@
 			<div class="container col-lg-6 col-md-6">
 			<img src="https://www.storiaememoriadibologna.it/imageserver/gallery_big/files/vecchio_archivio/seconda-guerra/d/D18250_174.jpg" class="img-fluid" alt="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei" title="Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits Istituzione Bologna Musei">
 			<figcaption>Sacrario. Bologna 1945 o 1946. Il Sacrario dei caduti della Resistenza in Piazza del Nettuno a Bologna. Credits <a href="https://www.storiaememoriadibologna.it/crediti" target="_blank">Istituzione Bologna Musei</a></figcaption></br>
-			<iframe src="in_art.html" width="100%" height="30%"></iframe>
+			<iframe src="in_art.html" width="100%" height="400vh"></iframe>
 			<figcaption>Virtual exhibition on artist-pet relationships</a></figcaption></br>
 			</div>
 			<p><b>PUT "PACT FRAMEWORK".</b></p>
@@ -244,7 +244,7 @@
 
 	<div class="row">
 	  <div class="col-lg-12 col-md-12 d-flex align-items-stretch">
-	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" align="center">
+	   <img src="assets/img/interaction/ChooseGuide.JPG" title="Choose your guide interaction schema" align="middle">
 	  </div>      
 	  <div class="col-lg-12 col-md-12 d-flex align-items-stretch iframe">
 	   <iframe ondblclick="requestFullscreen()" src="ChooseGuide.html" title="Choose your guide application" width=100%" allow="fullscreen"></iframe>
@@ -276,7 +276,7 @@
 		  <h5><b>3d print your pet!</b></h5></br>
 	      </div>
 	  <div class="col-lg-6 col-md-6 d-flex align-items-stretch">
-		  <h5>Search for your pet!</h5></br>
+	<h5><b>Search for your pet!</b></h5></br>
 	   </div>      
 	</div>
 
