--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -21,7 +21,7 @@
 
 Who want to be your guide through the exhibition?
 
-* [[Granizo-&gt;Hello!]] - Frida deer
+* &lt;img src=&quot;assets/img/frida_a4.png&quot;&gt; [[Granizo-&gt;Hello!]] - Frida deer
 * [[Minouche-&gt;Hello!]] - Henri Matisse cat
 * [[Lump-&gt;Hello!]] - Pablo Picasso dog
 * [[Biri-&gt;Hello!]] - Giosetta Fioroni dog
@@ -57,9 +57,7 @@ Choose the story you would like to listen to:
 * [[Henri and Minouche-&gt;Artist-pet story brief introduction]]
 * [[Giosetta Fioroni and Biri-&gt;Artist-pet story brief introduction]]
 * [[//Other//-&gt;Artist-pet story brief introduction]] //- still not available//
-      
-&lt;iframe src=&quot;https://enri-ca.github.io/WANTED/stories.html&quot; width=&quot;1000wv&quot; height=&quot;500wh&quot;&gt;&lt;/iframe&gt;</tw-passagedata><tw-passagedata pid="6" name="Artist-pet story brief introduction" tags="" position="1231,579" size="100,100">#Artist-pet story brief introduction
-
+    
 //In this passage, the user is briefly introduced to the artist and to the relationship they had with their pet.
 The user can then choose among knowing more about the artist, about the pet, or choosing another story.//
 
