--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -21,7 +21,7 @@
 
 Who want to be your guide through the exhibition?
 
-* &lt;img src=&quot;assets/img/frida_a4.png&quot;&gt; [[Granizo-&gt;Hello!]] - Frida deer
+* &lt;img src=&quot;assets/img/frida_a4.png&quot; width=&quot;5%&quot;&gt; [[Granizo-&gt;Hello!]] - Frida deer
 * [[Minouche-&gt;Hello!]] - Henri Matisse cat
 * [[Lump-&gt;Hello!]] - Pablo Picasso dog
 * [[Biri-&gt;Hello!]] - Giosetta Fioroni dog
