--- a/ChooseGuide.html
+++ b/ChooseGuide.html
@@ -22,7 +22,7 @@
 Who want to be your guide through the exhibition?
 
 * &lt;img src=&quot;assets/img/frida_a4.png&quot; width=&quot;5%&quot;&gt; [[Granizo-&gt;Hello!]] - Frida deer
-* [[Minouche-&gt;Hello!]] - Henri Matisse cat
+* &lt;img src=&quot;assets/img/matissegreen.png&quot; width=&quot;5%&quot;&gt; [[Minouche-&gt;Hello!]] - Henri Matisse cat
 * [[Lump-&gt;Hello!]] - Pablo Picasso dog
 * [[Biri-&gt;Hello!]] - Giosetta Fioroni dog
 * [[//Other//-&gt;Hello!]] //- still not available//
@@ -50,18 +50,18 @@ My name is ... and ... is my human.
 //In this passage, the user can choose the story they want to be told from the guide//
 
 ---
-
+    
 Choose the story you would like to listen to:	  
 
 * [[Frida and Granizo-&gt;Artist-pet story brief introduction]]
 * [[Henri and Minouche-&gt;Artist-pet story brief introduction]]
 * [[Giosetta Fioroni and Biri-&gt;Artist-pet story brief introduction]]
-* [[//Other//-&gt;Artist-pet story brief introduction]] //- still not available//
-    
+* [[//Other//-&gt;Artist-pet story brief introduction]] //- still not available//</tw-passagedata><tw-passagedata pid="6" name="Artist-pet story brief introduction" tags="" position="1200,479" size="100,100">#Artist-pet story brief introduction
+
 //In this passage, the user is briefly introduced to the artist and to the relationship they had with their pet.
 The user can then choose among knowing more about the artist, about the pet, or choosing another story.//
-
----
+ 
+ ---
 
 //The artist// is born in ... and is famous for ...
 They met first their pet //pet&#39;s name// when ... //---brief introduction---//
