--- a/Gringo.html
+++ b/Gringo.html
@@ -117,7 +117,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>SOS</h2>
+              <h2>WANTED!</h2>
               <p>Me llamo Gringo</br>
               Soy atigrado y flaco</br>
               Tengo  <span style="color:#008000; font-weight:bold;">collar verde</span>.</br>
