--- a/Luli.html
+++ b/Luli.html
@@ -129,7 +129,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>SOS</h2>
+              <h2>WANTED!</h2>
               <p>SE BUSCA A LULI</br>
               CANICHE BLANCO</br>
               CON <span style="color:#FF0000; font-weight:bold;">VESTIDO ROJO</span></br>
