--- a/Nobu.html
+++ b/Nobu.html
@@ -126,7 +126,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>SOS</h2>
+              <h2>WANTED!</h2>
               <p>CERCO GATTO CERTOSINO (Grigio, pelo lucente)</br>
               SPARITO IERI POMERIGGIO 25/3/22 IN VIA AUDINOT vicino angolo VIA GALLETTI</br>
               si chiama NOBU ed è un po' <strong>timido e tonto</strong></br>
