--- a/PWBD.html
+++ b/PWBD.html
@@ -288,29 +288,67 @@ On the other side, it would not be difficult to retrieve material about the topi
 <p>The (.....) designed by (.....) are a tool that we found very interesting and useful to fix our project in a more museological approach; their use helped us to frame all the ideas in a  certain standard and to define all the practical aspects of the work that had to be done.
 In this phase of ideation we decided to continue to develop both the ideas: that about a virtual initiative located in a real museum, and that about a virtual museum located exclusively online.</p>
 
+<h2>STEP 1: DEFINE CONTEXT</h2>
+<p>As first step of our design process we had to choose the most suitable assets (and their hypotetical proper audience)</p>
+<div class="two-grid">
+
+<div class="left">
 <p>PHYSICAL REFERENCE INSTITUTION</p>
-<p>First, we decided to deepen the idea related to a physical reference institution; the concept was: develope an interactive app, mobile-interaction based, trough which the visitor could be able to interact with the exhibit using its own mobile-device (a smartphone or a tablet).</p>
-<p>
+<p>When we decided to deepen the idea related to a physical reference institution the concept was: to develope an interactive app, mobile-interaction based, trough which the visitor could be able to interact with the exhibit using its own mobile-device (a smartphone or a tablet).</p>
 
-
-<p><b>SEZIONE MUSEO FISICO</b></p>
 <p><img src="assets/img/step1_1.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
 <p><b>[spiegazione]</b></p>
-  <p><img src="assets/img/step1_2.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
-<p><b>[spiegazione]</b></p>
+  
+  
+</div>
+<div class="right">
+<p><b>VIRTUAL MUSEUM</b></p>
+<p>In the case of the virtual museum the idea was different, but similar under some aspects: to develope
+  <p><img src="assets/img/step1.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
+  <p><b></b></p>
+  
+  <p><b>[spiegazione]</b></p>
+  
+</div>
+</div>
+
+
+<h2>STEP 2</h2>
+<div class="two-grid">
+<div class="left">
+<p><img src="assets/img/step1_2.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
+</div>
+<div class="right">
+<p><img src="assets/img/step2.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
+</div>
+</div>
+
+<h2>STEP 3</h2>
+<div class="two-grid">
+<div class="left">
   <p><img src="assets/img/step1_3.png" width="60%" style="border-radius: 0; margin-left: 20%"></p>
 <p><b>[spiegazione]</b></p>
-
-<p> <b>SEZIONE MUSEO VIRTUALE</b></p>
-  <p><img src="assets/img/step1.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
+</div>
+<div class="right">
+<p><img src="assets/img/step3.png" width="60%" style="border-radius: 0; margin-left: 20%"></p>
   <p><b>[spiegazione]</b></p>
-  <p><img src="assets/img/step2.png" width="50%" style="border-radius: 0; margin-left: 25%"></p>
-  <p><b>[spiegazione]</b></p>
-  <p><img src="assets/img/step3.png" width="60%" style="border-radius: 0; margin-left: 20%"></p>
-  <p><b>[spiegazione]</b></p>
+</div>
+</div>
+<h2>PERSONAE </h2>
+<div class="two-grid">
+  <div class="left">
+  <p><img src="assets/img/Personae1.jpeg" width="60%" style="margin-left: 20%"></p>
+  <h3>SCENARIO</h3>
+  <iframe ondblclick="requestFullscreen()" src="SOFIA.html" height="500px" width=100% allow="fullscreen"></iframe>
+  </div>
+  <div class="right">
+   <p><img src="assets/img/personae2.jpeg" width="60%" style="margin-left: 20%"></p>
+  <h3>SCENARIO</h3> 
+  </div>
+  
+</div>
 
 
-<p> PERSONAE </p>
 <p> SCENARIO </p>
 
 <h3><b>FINAL DESIGN</b></h3>
