--- a/in_art.html
+++ b/in_art.html
@@ -76,13 +76,17 @@
 
     <!-- ======= Services Section ======= -->
     <section id="services" class="services">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-up"> 
 
         <div class="section-title">
           <h2>In Art - Iconic Stories - The exhibit</h2>
           <hr>
         </div>
-
+	      
+	<div class="grid-container">
+		<iframe src="https://canecane.omeka.net/exhibits" width="100%" height="100%"></iframe>
+	</div>
+        
       <div class="grid-container">
         <div class="sinistra"><img src="assets/img/frida_a4.png" width="100%"></div>
         <div class="centro">
