--- a/in_art.html
+++ b/in_art.html
@@ -84,7 +84,7 @@
         </div>
 	      
 	<div class="grid-container">
-		<iframe src="https://canecane.omeka.net/exhibits"></iframe>
+		<iframe class="grid-container" src="https://canecane.omeka.net/exhibits"></iframe>
 	</div>
         
       <div class="grid-container">
