--- a/in_art.html
+++ b/in_art.html
@@ -78,15 +78,15 @@
     <section id="services" class="services">
       <div class="container" data-aos="fade-up"> 
 
-        <div class="section-title">
+        <!--div class="section-title">
           <h2>In Art - Iconic Stories - The exhibit</h2>
           <hr>
-        </div>
+        </div-->
 	      
 	
 		<iframe src="https://canecane.omeka.net/exhibits" width="100%" height="1000vh"></iframe>
 	        
-      <div class="grid-container">
+      <!--div class="grid-container">
         <div class="sinistra"><img src="assets/img/frida_a4.png" width="100%"></div>
         <div class="centro">
             <div class="icon-box">
@@ -140,7 +140,7 @@
         </div>
 
       </div>
-    </section><!-- End Services Section -->
+    </section--><!-- End Services Section -->
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
