--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-xl-2 col-md-4">
           <div class="icon-box">
             <img src="assets/img/fioroni.png" width="70%">
-            <h3><a href="in_art.html">In Art</a></h3>
+            <h3><a href="in_art.html">In Art - The exhibit</a></h3>
           </div>
         </div>
         
