--- a/Frida_Granizo.html
+++ b/Frida_Granizo.html
@@ -187,6 +187,21 @@
 
 		<div>
 			<h2 style="color: #ffc451">Further suggestions</h2>
+			
+			
+			Giacomelli, Marco Enrico. Giosetta Fioroni – Il cane Biri – 2012 | Artribune. https://www.artribune.com/report/2012/11/lo-specchio-di-giosetta-fioroni/attachment/fiortm0315/. Accessed 19 June 2022.
+‘Giosetta Fioroni’. Wikipedia, 3 Feb. 2022. Wikipedia, https://it.wikipedia.org/w/index.php?title=Giosetta_Fioroni&oldid=125446609.
+‘---’. Wikipedia, 3 Feb. 2022. Wikipedia, https://it.wikipedia.org/w/index.php?title=Giosetta_Fioroni&oldid=125446609.
+Giosetta Fioroni – Al Blu di Prussia. https://www.albludiprussia.com/giosetta-fioroni-e-linvenzione-della-famiglia/. Accessed 19 June 2022.
+‘Giosetta FIORONI “Dall” arte al tradimento la mia vita con Parise e l’ odore dell’ amore’ - la Repubblica.it’. Archivio - la Repubblica.it, https://ricerca.repubblica.it/repubblica/archivio/repubblica/2010/11/25/giosetta-fioroni-dall-arte-al-tradimento-la.html. Accessed 20 June 2022.
+Giosetta Fioroni e Il Suo Viaggio Sentimentale. Al Museo Del Novecento Di Milano, Una Colossale Mostra Di Una Grande Artista Della “Scuola Di Piazza Del Popolo”. – Il Blog Di Carlo Franza. https://blog.ilgiornale.it/franza/2018/08/27/giosetta-fioroni-e-il-suo-viaggio-sentimentale-al-museo-del-novecento-di-milano-una-colossale-mostra-di-una-grande-artista-della-scuola-di-piazza-del-popolo/. Accessed 19 June 2022.
+Giosetta Fioroni, viaggio sentimentale | estense.com Ferrara. 11 Apr. 2018, https://www.estense.com/?p=686366, https://www.estense.com/?p=686366.
+‘In Compagnia Della Meraviglia’. Il Manifesto, 20 Oct. 2021, https://ilmanifesto.it/in-compagnia-della-meraviglia/.
+Sandra Petrignani | Giosetta Fioroni Si Racconta (L’Unità, 5/8/2010). http://www.sandrapetrignani.it/?p=569. Accessed 19 June 2022.
+Suk, il Mondo di. ‘La mostra Lo sguardo prensile di Giosetta Fioroni Al Blu di Prussia’. il mondo di suk, 26 Sept. 2014, https://www.ilmondodisuk.com/la-mostralo-sguardo-prensile-di-giosetta-fioroni-al-blu-di-prussia/.
+			
+			
+			
 			<div class="csl-bib-body" style="line-height: 2; margin-left: 2em; text-indent:-2em;">
 		  <div class="csl-entry">Birth, My. <i>Frida Kahlo</i>.</div>
 		  <span class="Z3988" title="url_ver=Z39.88-2004&amp;ctx_ver=Z39.88-2004&amp;rfr_id=info%3Asid%2Fzotero.org%3A2&amp;rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&amp;rft.genre=article&amp;rft.atitle=Frida%20Kahlo&amp;rft.aufirst=My&amp;rft.aulast=Birth&amp;rft.au=My%20Birth"></span>
