--- a/PWBD.html
+++ b/PWBD.html
@@ -117,7 +117,11 @@
 
     <section class="inner-page">
 
-<!-- ======= Intro Section ======= -->  
+<!-- ======= Intro Section ======= -->
+	    
+<button class="accordion">Section 1</button>
+<div class="panel">
+	
 	<div class="container" id="Intro">
 	  <h3>Introduction</h3>
       <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
@@ -128,7 +132,7 @@
 	  At the same time, the project would also like to become a support tool in the search for the animal in the early stages of its disappearance, through the possibility of directly publishing the loss announcements accompanied by geolocation data. Each user can have the option to upload and share their own story or simply link that of others.</br>
 	  In addition to the suggestion of the user's emotional-cognitive aspect, the project also wants to provide an informative contribution, presenting some stories, works, performances of artists who have wanted to consecrate their emotional ties with their animal. 
 	  </p>
-	  
+</div>	  
 	  <div class="container" id="Context">
 	   	<h4>The Context</h4>
 		<div class="row">
