--- a/PWBD.html
+++ b/PWBD.html
@@ -119,12 +119,10 @@
 
 <!-- ======= Intro Section ======= -->
 	    
-<button class="accordion">Section 1</button>
-<div class="panel">
-	
 	<div class="container" id="Intro">
-	  <h3>Introduction</h3>
-      <p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
+		<button class="accordion"><h3>Introduction</h3></button>
+	<div class="panel">
+      	<p><strong class="title">Wanted!</strong> is a project that have been inspired by a corpus of <cite>lost-pets-advertisements</cite> photographs collected over the years in various places and it is focused on the complex relationship between humans and their pets in an anti-specistic view of interpersonal relationship and family's bounds.</br>
 	  The name obviously comes from the strong visual relationship of these sos-flyers with the <cite>Old West</cite> bandit bans.</br>
 	  The website is conceived as a multi-dimensional cultural environment offering different paths to be explored such as a <strong>current virtual exhibition</strong>, a growing <strong>souvenir-book</strong> built from users interaction and some <strong>data-visualization</strong>.
 	  </p>
