--- a/PWBD.html
+++ b/PWBD.html
@@ -132,6 +132,7 @@
       </div>
     </div>
   </div>
+	    </div>
 		    
 	<div class="container" id="Intro">
 		<button class="accordion"><h3>Introduction</h3></button>
